<resources>
    <string name="app_name">Modern Darji</string>
    <string name="alteration">ALTERATION</string>
    <string name="custom">CUSTOM</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="ethnic">ETHNIC</string>
    <string name="button">Button</string>
    <string name="formal">FORMAL</string>
    <string name="uniform">UNIFORM</string>
    <string name="measure_me">MEASURE ME</string>
    <string name="get_my_tailor">GET MY TAILOR</string>
    <string name="choose_your_size">Choose Your Size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="choose_size">CHOOSE SIZE</string>
    <string name="give_specific_measurement">GIVE SPECIFIC MEASUREMENT</string>
    <string name="choose_your_measurement_option">Choose your measurement option</string>
    <string name="choose_your_measurement_process">Choose your measurement process</string>
    <string name="give_my_size">GIVE MY SIZE</string>
    <string name="choose_your_payment_option">Choose Your Payment Option</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="debit_card">DEBIT CARD</string>
    <string name="pin_code">Pin Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="email">Email</string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="will_be_available_soon">Will be available soon</string>
    <string name="your_order_will_be_processed_soon">Your order will be processed soon</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="expiry">Expiry</string>
    <string name="enter_specific_measurement">Enter Specific Measurement</string>
    <string name="bust_in_inches">Bust(in inches)</string>
    <string name="waist_in_inches">Waist(in inches)</string>
    <string name="hip_in_inches">Hip(in inches</string>
    <string name="shoulder_width_in_inches">Shoulder width(in inches)</string>
    <string name="proceed">PROCEED</string>
    <string name="todo">TODO</string>
</resources>
