<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/choose_your_size"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="50sp" />


    <Button
        android:id="@+id/buttonS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#070707"
        android:text="@string/s"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#070707"
        android:textColor="#FFFFFF"
        android:text="@string/m" />

    <Button
        android:id="@+id/buttonL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#070707"
        android:textColor="#FFFFFF"
        android:text="@string/l" />

    <Button
        android:id="@+id/buttonXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#070707"
        android:textColor="#FFFFFF"
        android:text="@string/xl" />

    <Button
        android:id="@+id/buttonXXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#070707"
        android:textColor="#FFFFFF"
        android:text="@string/xxl" />


</LinearLayout>