<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_measurement_process"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonGiveMySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/give_my_size"
        android:background="#050505"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonMeasureMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#050505"
        android:text="@string/measure_me"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/buttonGetMyTailor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_my_tailor"
        android:background="#050505"
        android:textColor="#FFFFFF" />
</LinearLayout>