<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFA"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:text="@string/enter_specific_measurement"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bust_in_inches"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waist_in_inches"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hip_in_inches"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoulder_width_in_inches"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#070707"
        android:text="@string/proceed"
        android:textColor="#FFFFFF" />
</LinearLayout>
