<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_payment_option"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="50sp" />

    <Button
        android:id="@+id/CashOnDeliveryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#090909"
        android:text="@string/cash_on_delivery"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/DebitCardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#070707"
        android:text="@string/debit_card"
        android:textColor="#FFFFFF" />
</LinearLayout>