<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/choose_your_measurement_option"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="50sp" />

    <Button
        android:id="@+id/buttonChooseSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#070707"
        android:text="@string/choose_size"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonGiveSpecificMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#070707"
        android:textColor="#FFFFFF"
        android:text="@string/give_specific_measurement" />


</LinearLayout>