<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/customMenImage"
                android:layout_width="399dp"
                android:layout_height="250dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/men_ethnic_image" />

            <Button
                android:id="@+id/menEthnicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:text="@string/ethnic"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/alterationMenImage"
                android:layout_width="374dp"
                android:layout_height="276dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/men_formal_image" />

            <Button
                android:id="@+id/menFormalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:text="@string/formal"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="380dp"
                app:srcCompat="@drawable/uniform1"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/boysUniformAlterationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_dark"
                android:text="@string/uniform"
                android:textColor="@android:color/background_light"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
