<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/menImage"
                android:layout_width="wrap_content"
                android:layout_height="226dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/men" />

            <Button
                android:id="@+id/menButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:background="@android:color/background_dark"
                android:text="@string/men"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

    <ImageView
        android:id="@+id/womenImage"
        android:layout_width="wrap_content"
        android:layout_height="222dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/women" />

            <Button
                android:id="@+id/womenButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@android:color/background_dark"
                android:text="@string/women"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
